--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "gulp": "^3.9.0",
+    "jade": "^1.11.0",
     "mongoose": "^4.3.7",
+    "mongoose-text-search": "0.0.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
