--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "A site where users can buy used books.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "repository": {
