--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.13.4",
     "gulp": "^3.9.0",
     "jade": "^1.11.0",
+    "mongodb": "^2.1.6",
     "mongoose": "^4.3.7",
     "mongoose-text-search": "0.0.2",
     "passport": "^0.3.2",
